--- a/app/views/user/homes/about.html.erb
+++ b/app/views/user/homes/about.html.erb
@@ -1,6 +1,6 @@
 <div class='main-top'>
-  <h1 class='text-center'>本サイトの目的</h1>
-  <p class='text-center mt-5'>
+  <h1 class=''>本サイトの目的</h1>
+  <p class='mt-5'>
     このサイトは未来のエンジニア業界の不足を挫折率減少の面で、<br />
     少しでも支えられるように初学者、未経験の方の役に立つサイトを目指しています。<br />
     みなさんが今日一日、学んだことを投稿してこれから勉強を始める方の参考になるように、<br />
@@ -8,11 +8,11 @@
     お互いに教え合い、学べるサイトをみなさんと作っていけたらいいなと思っています！
   </p>
 
-  <h2 class='text-center mt-5'>
+  <h2 class='mt-5'>
     利用する上での注意点
   </h2>
 
-  <ul class='text-center mt-5'>
+  <ul class='mt-5'>
     <li>人の投稿に対する迷惑行為はやめましょう。</li>
     <li>言葉遣いに気を配りましょう。</li>
     <li>疑問点や理解しきれない箇所は積極的に質問機能を利用しましょう。（お互いのレベルアップにつながります）</li>
