--- a/app/views/user/homes/top.html.erb
+++ b/app/views/user/homes/top.html.erb
@@ -1,11 +1,13 @@
-<div class='main-top'>
-  <h1 class='text-center mt-5'>ようこそプログラミング勉強専用サイトへ！！</h1>
+<div class='container main-top'>
+  <div class='row'>
+  <h1 class='mt-5 col-12'>ようこそプログラミング勉強専用サイトへ！！</h1>
 
-  <p class='text-center my-5'>
+  <div class='my-5 col-12'>
     お互いに切磋琢磨しレベルの高いエンジニアを目指してみんなで知識理解を深めましょう
-  </p>
+  </div>
 
   <div class='text-right main-height'>
     <%= link_to "注意点やお願い、本サイトの目的", about_path %><span>を読んでいただけると幸いです。</span>
+  </div>
   </div>
 </div>
