--- a/app/views/user/members/_index.html.erb
+++ b/app/views/user/members/_index.html.erb
@@ -2,10 +2,10 @@
   <tr>
     <% if member.guest? %>
       <td><%= link_to member.nickname,member_path(member.id) %></td>
-      <td><%= member.full_name %></td>
-      <td><%= member.likes.count %></td>
-      <td><%= member.followings.count %></td>
-      <td><%= member.followers.count %></td>
+      <td><%= "#{member.full_name}さん" %></td>
+      <td><%= "#{member.likes.count}件" %></td>
+      <td><%= "#{member.followings.count}人" %></td>
+      <td><%= "#{member.followers.count}人" %></td>
     <% end %>
   </tr>
 <% end %>
