--- a/app/views/user/members/check.html.erb
+++ b/app/views/user/members/check.html.erb
@@ -1,6 +1,6 @@
 <div class='main-top'>
 
-  <h1 class='text-center'>本当に再開しますか？</h1>
+  <h1 class='text-center'>本当に退会しますか？</h1>
   <p class='text-center mt-5'>退会すると主に以下の項目が使えなくなります</p>
   <ul class='text-center mt-5'>
     <li>投稿すること</li>
@@ -12,6 +12,6 @@
   <h2 class='text-center mt-5'>上記を確認の上、実行してください</h2>
 
   <div class='text-center mt-5'>
-    <%= link_to '退会します', withdrawal_path,method: :patch ,class: 'btn btn-danger'%>
+    <%= link_to '退会します', withdrawal_path,method: :patch, class: 'btn btn-danger'%>
   </div>
 </div>
