--- a/app/views/user/posts/_index.html.erb
+++ b/app/views/user/posts/_index.html.erb
@@ -3,12 +3,11 @@
     <td><%= link_to post.member.nickname, member_path(post.member_id) %></td>
     <td><%= link_to post.title, post_path(post.id) %></td>
     <td><%= post.content.truncate(30) %></td>
-    <% if current_member.id == post.member_id %>
-      <td><%= link_to '編集する', edit_post_path(post.id),class: 'btn btn-success' %></td>
-      <td><%= link_to '削除する', post_path(post.id),method: :delete,class: 'btn btn-danger' %></td>
+    <% if current_member.id == post.member_id || current_member.guest_member %>
+      <td><%= "♥#{post.likes.count}" %></td>
     <% end %>
-    <td id="like_buttons_<%= post.id %>">
-      <%= render "user/likes/like", post: post %>
-    </td>
+      <td id="like_buttons_<%= post.id %>">
+        <%= render "user/likes/like", post: post %>
+      </td>
   </tr>
 <% end %>
