--- a/app/views/user/posts/show.html.erb
+++ b/app/views/user/posts/show.html.erb
@@ -1,13 +1,28 @@
-<div class="container">
+<div class="container main-top">
   <div class="row">
-    <div class="col-9 offset-2">
-      <h2>タイトル: <%= @post.title %></h2>
+    <div class="col-10">
+      <table class='table'>
+        <tbody>
+          <h2>投稿詳細</h2>
+          <tr>
+            <th>タイトル: </th>
+            <td><%= @post.title %></td>
+          </tr>
+          <tr>
+            <th>投稿内容:</th>
+            <td><%= @post.content %></td>
+          </tr>
+          <tr>
+            <th>タグ:</th>
+            <td><%= @post.tags.pluck(:name).join(',') %></td>
+          </tr>
+        </tbody>
+      </table>
 
-      <h4>投稿内容: <%= @post.content %></h4>
       <% if current_member.guest? %>
         <% if current_member.id == @post.member_id %>
           <%= link_to '編集する', edit_post_path(@post.id),class: 'btn btn-success' %>
-          <%= link_to '削除する', post_path(@post.id),method: :delete,class: 'btn btn-danger' %>
+          <%= link_to '削除する', post_path(@post.id),method: :delete, data: {confirm: "削除しますか？"} ,class: 'btn btn-danger' %>
         <% else %>
           <%= form_with model: [@post,@post_comment] do |f| %>
             <%= f.text_area :comment, rows: '5', placeholder: 'コメントしてみよう！' %>
@@ -25,7 +40,7 @@
       <% @post.post_comments.each do |post_comment| %>
         <%= post_comment.comment %>
         <% if post_comment.member_id == current_member.id %>
-          <%= link_to '削除する', post_post_comment_path(post_comment.post.id, post_comment.id), method: :delete %>
+          <%= link_to '削除する', post_post_comment_path(post_comment.post.id, post_comment.id), method: :delete, data: {confirm: "削除しますか？"} %>
         <% end %>
       <% end %>
 
