--- a/app/views/user/registrations/new.html.erb
+++ b/app/views/user/registrations/new.html.erb
@@ -1,47 +1,53 @@
-<h2>新規登録</h2>
+<div class='container main-top'>
+  <div class='row'>
+    <div class='col-10'>
+      <h2>新規登録</h2>
 
-  <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-    <%= render "user/shared/error_messages", resource: resource %>
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+        <%= render "user/shared/error_messages", resource: resource %>
 
-    <div class="field">
-      <%= f.label '名前' %><span class="badge badge-light ml-2">必須</span>
-      <%= f.text_field :last_name, placeholder: "性", autofocus: true %>
-      <%= f.text_field :first_name, placeholder: "名" %>
+        <div class="field">
+          <%= f.label '名前' %>&emsp;<span class="badge badge-danger">必須</span>
+          <%= f.text_field :last_name, placeholder: "性", autofocus: true %>
+          <%= f.text_field :first_name, placeholder: "名" %>
+        </div>
+
+        <div class="field">
+          <%= f.label :nickname, 'ニックネーム' %>&emsp;<span class="badge badge-danger">必須</span>
+          <%= f.text_field :nickname, placeholder: "ぴょん太" %>
+        </div>
+
+        <div class="field">
+          <%= f.label :introduction, '自己紹介' %>
+          <%= f.text_field :introduction %>
+        </div>
+
+        <div class="field">
+          <%= f.label :email, 'メールアドレス' %>&emsp;<span class="badge badge-danger">必須</span>
+          <%= f.email_field :email, autofocus: true,placeholder: "12345678", autocomplete: "email" %>
+        </div>
+
+        <div class="field">
+          <%= f.label :password, 'パスワード（6文字以上）' %>&emsp;<span class="badge badge-danger">必須</span>
+          <%= f.password_field :password,placeholder: "12345678", autocomplete: "new-password" %>
+        </div>
+
+        <div class="field">
+          <%= f.label :password_confirmation, 'パスワード再確認（6文字以上）' %>&emsp;<span class="badge badge-danger">必須</span>
+          <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+        </div>
+
+        <div class="field">
+          <%= f.label :start_date, '勉強を始めた日' %>&emsp;<span class="badge badge-danger">必須</span>
+          <%= f.date_field :start_date %>
+        </div>
+
+        <div class="actions">
+          <%= f.submit "新規登録",class: 'btn btn-success' %>
+        </div>
+      <% end %>
+
+      <%= render "user/shared/links" %>
     </div>
-
-    <div class="field">
-      <%= f.label :nickname, 'ニックネーム' %><span class="badge badge-light ml-2">必須</span>
-      <%= f.text_field :nickname, placeholder: "ぴょん太" %>
-    </div>
-
-    <div class="field">
-      <%= f.label :introduction, '自己紹介' %>
-      <%= f.text_field :introduction %>
-    </div>
-
-    <div class="field">
-      <%= f.label :email, 'メールアドレス' %><span class="badge badge-light ml-2">必須</span>
-      <%= f.email_field :email, autofocus: true,placeholder: "12345678", autocomplete: "email" %>
-    </div>
-
-    <div class="field">
-      <%= f.label :password, 'パスワード（6文字以上）' %><span class="badge badge-light ml-2">必須</span>
-      <%= f.password_field :password,placeholder: "12345678", autocomplete: "new-password" %>
-    </div>
-
-    <div class="field">
-      <%= f.label :password_confirmation, 'パスワード再確認（6文字以上）' %><span class="badge badge-light ml-2">必須</span>
-      <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-    </div>
-
-    <div class="field">
-      <%= f.label :start_date, '勉強を始めた日' %>
-      <%= f.date_field :start_date %>
-    </div>
-
-    <div class="actions">
-      <%= f.submit "新規登録",class: 'btn btn-success' %>
-    </div>
-  <% end %>
-
-  <%= render "user/shared/links" %>
+  </div>
+</div>
