--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,4 @@
-<header class="shadow-sm d-flex flex-column">
+<header class="d-flex flex-column">
   <nav class="navbar navbar-expand-lg navbar-light">
     <div class="container">
       <%= link_to 'ホーム画面', root_path, class: 'navbar-brand p-3' %>
@@ -77,4 +77,3 @@
     </div>
   </nav>
 </header>
-
