--- a/app/views/user/homes/about.html.erb
+++ b/app/views/user/homes/about.html.erb
@@ -1,5 +1,5 @@
-<div class='main-top'>
-  <h1 class=''>本サイトの目的</h1>
+<div class='text-center'>
+  <h1>本サイトの目的</h1>
   <p class='mt-5'>
     このサイトは未来のエンジニア業界の不足を挫折率減少の面で、<br />
     少しでも支えられるように初学者、未経験の方の役に立つサイトを目指しています。<br />
