--- a/app/views/user/homes/top.html.erb
+++ b/app/views/user/homes/top.html.erb
@@ -1,13 +1,10 @@
-<div class='container main-top'>
-  <div class='row'>
-  <h1 class='mt-5 col-12'>ようこそプログラミング勉強専用サイトへ！！</h1>
-
-  <div class='my-5 col-12'>
+<div class='text-center'>
+    <h1 class='top'>ようこそプログラミング勉強専用サイトへ！！</h1>
+  <div class='my-5'>
     お互いに切磋琢磨しレベルの高いエンジニアを目指してみんなで知識理解を深めましょう
   </div>
 
-  <div class='text-right main-height'>
+  <div class='text-right'>
     <%= link_to "注意点やお願い、本サイトの目的", about_path %><span>を読んでいただけると幸いです。</span>
-  </div>
   </div>
 </div>
