--- a/app/views/admin/members/show.html.erb
+++ b/app/views/admin/members/show.html.erb
@@ -53,7 +53,9 @@
           <% end %>
         </tbody>
       </table>
-      <%= link_to "#{@member.full_name}さんの編集ページへ", edit_admin_member_path(@member.id), class: 'btn btn-success' %>
+      <div class='text-right'>
+        <%= link_to "#{@member.full_name}さんの編集ページへ", edit_admin_member_path(@member.id), class: 'btn btn-success' %>
+      </div>
     </div>
   </div>
 </div>
