--- a/app/views/admin/posts/index.html.erb
+++ b/app/views/admin/posts/index.html.erb
@@ -1,29 +1,27 @@
 <div class='container main-top'>
   <div class='row'>
-    <div class='col-10'>
-      <h2>投稿一覧</h2>
-      <table class='table table-striped'>
-        <thead class='thead-dark'>
+    <h2>投稿一覧</h2>
+    <table class='table table-striped'>
+      <thead class='thead-dark'>
+        <tr>
+          <th>投稿者</th>
+          <th>タイトル</th>
+          <th>内容</th>
+          <th>タグ</th>
+          <th class='col-2'>状態</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @posts.each do |post| %>
           <tr>
-            <th>投稿者</th>
-            <th>タイトル</th>
-            <th>内容</th>
-            <th>タグ</th>
-            <th>状態</th>
+            <td><%= link_to post.member.full_name, admin_member_path(post.member_id) %></td>
+            <td><%= link_to post.title, admin_post_path(post.id) %></td>
+            <td><%= post.content.truncate(30) %></td>
+            <td><%= post.tags.pluck(:name).join(',') %></td>
+            <td><%= post.status_i18n %></td>
           </tr>
-        </thead>
-        <tbody>
-          <% @posts.each do |post| %>
-            <tr>
-              <td><%= link_to post.member.full_name, admin_member_path(post.member_id) %></td>
-              <td><%= link_to post.title, admin_post_path(post.id) %></td>
-              <td><%= post.content.truncate(30) %></td>
-              <td><%= post.tags.pluck(:name).join(',') %></td>
-              <td><%= post.status_i18n %></td>
-            </tr>
-          <% end %>
-        </tbody>
-      </table>
-    </div>
+        <% end %>
+      </tbody>
+    </table>
   </div>
 </div>
