--- a/app/views/admin/tags/index.html.erb
+++ b/app/views/admin/tags/index.html.erb
@@ -13,7 +13,7 @@
           <% @tags.each do |tag| %>
             <tr>
               <td><%= tag.name %></td>
-              <td><%= link_to '削除する', admin_tag_path(tag.id), method: :delete,"data-confirm" => "本当に消しますか?" %></td>
+              <td><%= link_to '削除する', admin_tag_path(tag.id), method: :delete,"data-confirm" => "本当に消しますか?", class: 'btn btn-danger' %></td>
             </tr>
           <% end %>
         </tbody>
