--- a/app/views/user/likes/_like.html.erb
+++ b/app/views/user/likes/_like.html.erb
@@ -1,6 +1,6 @@
 <% if current_member.id != post.member_id && current_member.guest? %>
   <% if post.liked_by?(current_member) %>
-      <%= link_to post_likes_path(post.id), method: :delete, remote: true do %>
+      <%= link_to post_likes_path(post.id), method: :delete,remote: true do %>
         ♥<%= post.likes.count %>
       <% end %>
   <% else %>
@@ -8,4 +8,6 @@
         ♡<%= post.likes.count %>
       <% end %>
   <% end %>
+<% else %>
+  ♥<%= post.likes.count %>
 <% end %>
