--- a/app/views/user/members/index.html.erb
+++ b/app/views/user/members/index.html.erb
@@ -1,13 +1,16 @@
-<div class='container main-top'>
+<div class='main-top'>
   <div class='row'>
+    <div class='col-2'>
+      <%= render 'user/posts/tag_lists', tag_lists: Tag.all %>
+    </div>
     <div class='col-10'>
       <table class='table'>
         <thead>
           <h2>参加者の一覧</h2>
           <tr>
-            <th class='col-2'>ニックネーム</th>
-            <th class='col-2'>フルネーム</th>
-            <th class='col-1'>いいね総数</th>
+            <th class='col-4'>ニックネーム</th>
+            <th class='col-4'>フルネーム</th>
+            <th class='col-2'>いいね総数</th>
             <th class='col-1'>フォロー</th>
             <th class='col-1'>フォロワー</th>
           </tr>
