--- a/app/views/user/posts/_tag_lists.html.erb
+++ b/app/views/user/posts/_tag_lists.html.erb
@@ -1,10 +1,15 @@
-<% tag_lists.each do |list| %>
-  <% if list.posts.published.count != 0 %>
-    <tr>
-      <td>
-        <%=link_to list.name, tag_posts_path(tag_id: list.id) %>
-        <%= "(#{list.posts.published.count})" %>
-      </td>
-    </tr>
-  <% end %>
-<% end %>
+<table class='table'>
+  <h6>タグ一覧</h6>
+  <tbody>
+    <% tag_lists.each do |list| %>
+      <% if list.posts.published.count != 0 %>
+        <tr>
+          <td>
+            <%=link_to list.name, tag_posts_path(tag_id: list.id) %>
+            <%= "(#{list.posts.published.count})" %>
+          </td>
+        </tr>
+      <% end %>
+    <% end %>
+  </tbody>
+</table>
