--- a/app/views/user/posts/edit.html.erb
+++ b/app/views/user/posts/edit.html.erb
@@ -1,4 +1,4 @@
-<%= render 'layouts/errors', obj: @post %>
+<%= render 'shared/errors', obj: @post %>
 <div class='container main-top'>
   <div class='row'>
     <div class='col-10'>
