--- a/app/views/user/posts/index.html.erb
+++ b/app/views/user/posts/index.html.erb
@@ -1,15 +1,18 @@
 <div class='container main-top'>
   <div class='row'>
-    <div class='col-11'>
+    <div class='col-2'>
+      <%= render 'user/posts/tag_lists', tag_lists: Tag.all %>
+    </div>
+    <div class='col-10'>
       <h2>投稿一覧</h2>
       <%= render 'user/posts/post_search' %>
       <table class='table'>
         <thead>
           <tr>
-            <th class='col-2'>投稿者</th>
-            <th class='col-2'>タイトル</th>
-            <th calss='col-5'>内容</th>
-            <th class='col-1'>いいね総数</th>
+            <th>投稿者</th>
+            <th>タイトル</th>
+            <th>内容</th>
+            <th>いいね数</th>
           </tr>
         </thead>
         <tbody>
@@ -18,17 +21,4 @@
       </table>
     </div>
   </div>
-</div>
-
-<div class='container'>
-<table class='table'>
-  <thead>
-    <tr>
-      <th>タグ一覧</th>
-    </tr>
-  </thead>
-  <tbody>
-    <%= render 'user/posts/tag_lists', tag_lists: @tag_lists %>
-  </tbody>
-</table>
 </div>
