--- a/app/views/user/posts/new.html.erb
+++ b/app/views/user/posts/new.html.erb
@@ -1,31 +1,33 @@
-<%= render 'layouts/errors', obj: @post %>
+<%= render 'shared/errors', obj: @post %>
 <div class='container main-top'>
   <div class='row'>
     <div class='col-10'>
+      <h2>新規投稿</h2>
       <%= form_with model: @post,url: posts_path do |f| %>
-        <table class='table'>
-          <tbody>
-            <h2>新規投稿</h2>
-            <tr>
-              <th><%= f.label :title, 'タイトル' %>&emsp;<span class="badge badge-danger">必須</span></th>
-              <td><%= f.text_field :title, placeholder: 'タイトルはここに' %></td>
-            </tr>
-            <tr>
-              <th><%= f.label :content, '内容' %>&emsp;<span class="badge badge-danger">必須</span></th>
-              <td><%= f.text_area :content, placeholder: '投稿をしてみよう！' %></td>
-            </tr>
-            <tr>
-              <th><%= f.label :name, 'タグ' %></th>
-              <td><%= f.text_field :name %></td>
-            </tr>
 
-            <td><%= f.select :status, Post.statuses.keys.map{ |k| [t("enums.post.status.#{k}"),k]},{},{class: "custom-select"} %></td>
+        <div class='form-group'>
+          <%= f.label :title, 'タイトル' %>&emsp;<span class="badge badge-danger">必須</span>
+          <%= f.text_field :title, placeholder: 'タイトルはここに',class: 'form-control' %>
+        </div>
 
-            <td>
-              <%= f.submit '投稿',class: 'btn btn-success' %>
-            </td>
-          </tbody>
-        </table>
+        <div class='form-group'>
+          <%= f.label :content, '内容' %>&emsp;<span class="badge badge-danger">必須</span>
+          <%= f.text_area :content, placeholder: '投稿をしてみよう！',class: 'form-control',rows: "10" %>
+        </div>
+
+        <div class='form-group'>
+          <%= f.label :name, 'タグ' %>
+          <%= f.text_field :name,class: 'form-control' %>
+        </div>
+
+        <div class='form-group'>
+          <%= f.select :status, Post.statuses.keys.map{ |k| [t("enums.post.status.#{k}"),k]},{},{class: "custom-select"} %>
+        </div>
+
+        <div class='form-group text-right '>
+          <%= f.submit '投稿',class: 'btn btn-success' %>
+        </div>
+
       <% end %>
     </div>
   </div>
