--- a/app/views/user/posts/search_tag.html.erb
+++ b/app/views/user/posts/search_tag.html.erb
@@ -1,5 +1,8 @@
 <div class= 'container main-top'>
   <div class='row'>
+    <div class='col-2'>
+      <%= render 'user/posts/tag_lists', tag_lists: Tag.all %>
+    </div>
     <div class='col-10'>
       <h2>タグ検索投稿一覧 <%= "─ #{@tag.name} ─ " %></h2>
       <table class='table'>
