細かい調整非同期

--- a/app/views/admin/posts/show.html.erb
+++ b/app/views/admin/posts/show.html.erb
@@ -1,4 +1,4 @@
-<div class='container main-top'>
+<div class='container'>
   <div class='row'>
     <div class='col-10'>
       <h2><%= @member.full_name %>さんの投稿</h2>
